--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -36,7 +36,7 @@
                 <input type="hidden" name="_csrf"
                        th:value="${_csrf.token}" />
                 <div class="text-center">
-                    <input class="btn btn-primary" type="submit" value="Sign in!">
+                    <input class="btn btn-primary" type="submit" value="Sign Up">
                 </div>
             </form>
         </div>
