This is a new commit for what I originally planned to be an amendmend

--- a/src/main/resources/templates/register_new_product.html
+++ b/src/main/resources/templates/register_new_product.html
@@ -28,6 +28,10 @@
                 <label>Photos: </label>
                 <input type="file" name="image" accept="image/png, image/jpeg" />
             </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <label>Photos: </label>
+                <input type="file" name="image" accept="image/png, image/jpeg" />
+            </div>
             <input type="hidden" name="_csrf"
                    th:value="${_csrf.token}" />
             <div class="text-center">
