--- a/src/main/resources/templates/edit_product.html
+++ b/src/main/resources/templates/edit_product.html
@@ -12,7 +12,21 @@
             <h1 class="text-center">
                 Edit product
             </h1>
-            <form action="/product" method="post"
+            <div style="display:flex;">
+                <div th:each="picture : ${product.pictures}">
+                <img style="width:200px;height:300px;" th:src="@{${'~/static/users/' + product.user.id + '/products/' + product.id + '/' + picture}}"/>
+                    <form th:action="@{${'~/product/edit/' + product.id + '/' + picture[0]}}" method="post"
+                          enctype="multipart/form-data">
+                <input th:id="${picture[0]}" type="file" name="image" accept="image/png, image/jpeg" />
+                        <input type="hidden" name="_csrf"
+                               th:value="${_csrf.token}" />
+                        <div class="text-center">
+                            <input class="btn btn-primary" type="submit" value="Edit">
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <form th:action="@{${'~/product/edit/' + product.id}}" method="post"
                   enctype="multipart/form-data">
                 <div class="form-group mx-sm-3 mb-2">
                     <label for="name">Name</label>
@@ -24,15 +38,10 @@
                     <input class="form-control" th:classappend="${descriptionMessage} ? is-invalid : ''" type="text" name="description" id="description" th:value="${product.description}">
                     <div th:if="${descriptionMessage}" class="invalid-feedback" th:text="${descriptionMessage}"/>
                 </div>
-                <div class="form-group mx-sm-3 mb-2">
-                    <label>Photos: </label>
-                    <input type="file" name="image" accept="image/png, image/jpeg" />
-                </div>
-                <div th:if="${!product.getPictures().isEmpty()}" scope="row"><img style="width:200px;height:300px;" class="image" th:src="@{${'~/static/users/' + product.user.id + '/products/' + product.id + '/' +product.getPictures()[0]}}"></div>
                 <input type="hidden" name="_csrf"
                        th:value="${_csrf.token}" />
                 <div class="text-center">
-                    <input class="btn btn-primary" type="submit" value="Sign Up">
+                    <input class="btn btn-primary" type="submit" value="Edit">
                 </div>
             </form>
         </div>
