--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head th:replace="fragments/general.html :: head">
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
 </head>
 <body>
 <div th:replace="fragments/general.html :: nav"/>
-<!--<h1 th:text="${user.username}"/>-->
-<!--<form action="/logout" method="post">-->
-<!--    <input type="hidden" name="_csrf" th:value="${_csrf.token}">-->
-<!--    <input class="btn btn-primary" type="submit" value="Sign out">-->
-<!--</form>-->
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">Product name</th>
-        <th scope="col">Product description</th>
-        <th scope="col">Product image</th>
-        <th scope="col">Seller</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="product : ${products}">
-        <th th:text="${product.name}" scope="row"/>
-        <th th:text="${product.description}" scope="row"/>
-        <th th:if="${!product.getPictures().isEmpty()}" scope="row"><img style="width:200px;height:300px;" class="image" th:src="@{${'static/users/' + product.user.id + '/products/' + product.id + '/' +product.getPictures()[0]}}"></th>
-        <th th:text="${product.user.username}" scope="row"/>
-    </tr>
-    </tbody>
+<div class=" card-group m-2">
+    <div th:each="product : ${products}">
+        <div class="card m-2 h-100" style="width: 18rem;">
+            <img th:if="${!product.getPictures().isEmpty()}" class="card-img-top" th:src="@{${'static/users/' + product.user.id + '/products/' + product.id + '/' +product.getPictures()[0]}}">
+            <div class="card-body">
+                <h5 th:text="${product.name}" class="card-title"/>
+                <p th:text="${product.description}" class="card-text"/>
+                <p th:text="${'By ' + product.user.username}"class="card-text"/>
+<!--                <a href="#" class="btn btn-primary">Go somewhere</a>-->
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
