--- a/src/main/resources/templates/register_new_product.html
+++ b/src/main/resources/templates/register_new_product.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<!--    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"/>-->
+    <head th:replace="fragments/general.html :: head">
     <script>
         var el = document.getElementById("add-product");
         function kik() {
@@ -18,7 +16,7 @@
             return true;
         }
     </script>
-</head>
+    </head>
 <body>
 <div th:replace="fragments/general.html :: nav"/>
 <div class="container">
