--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -2,21 +2,19 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head th:fragment="head">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
-
+<header>
 <nav th:fragment="nav" class="navbar navbar-expand-lg navbar-light bg-light">
-
+    <div class="container-xxl">
     <a class="navbar-brand" href="/">NiceShop</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <th:block th:if="${#authentication.getPrincipal()}!='anonymousUser'" th:with="auth=${#authentication.getPrincipal()}">
             <li class="nav-item active">
                 <a class="nav-link" th:href="|/user/${auth.getId()}|">My profile</a>
@@ -31,38 +29,18 @@
                 <a class="nav-link" href="/user">User List</a>
             </li>
             </th:block>
-<!--            <li class="nav-item dropdown">-->
-<!--                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--                    Dropdown-->
-<!--                </a>-->
-<!--                <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-<!--                    <a class="dropdown-item" href="#">Action</a>-->
-<!--                    <a class="dropdown-item" href="#">Another action</a>-->
-<!--                    <div class="dropdown-divider"></div>-->
-<!--                    <a class="dropdown-item" href="#">Something else here</a>-->
-<!--                </div>-->
-<!--            </li>-->
         </ul>
-<!--        <form class="form-inline my-2 my-lg-0">-->
-<!--            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
-<!--            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
-<!--        </form>-->
-        <th:block th:if="${#authentication.getPrincipal()}!='anonymousUser'" th:with="auth=${#authentication.getPrincipal()}">
+        <form th:if="${#authentication.getPrincipal()}!='anonymousUser'" action="/logout" method="post" class="d-flex">
 
-        <div class="form-inline my-2 my-lg-0">
-            <div class="mr-sm-2" th:text="${user.username}"/>
-            <form action="/logout" method="post">
-                <input type="hidden" name="_csrf" th:value="${_csrf.token}">
-                <input class="btn btn-primary my-2 my-sm-0" type="submit" value="Sign out">
-            </form>
-        </div>
-        </th:block>
-        <th:block th:if="${#authentication.getPrincipal()}=='anonymousUser'">
-
-            <a href="/login">Login</a>
-        </th:block>
+            <div class="m-2 my-sm-2" th:text="${user.username}"/>
+            <input type="hidden" name="_csrf" th:value="${_csrf.token}">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</button>
+        </form>
+        <a class="btn btn-outline-success my-2 my-sm-0" th:if="${#authentication.getPrincipal()}=='anonymousUser'" href="/login">Login</a>
+    </div>
     </div>
 </nav>
+</header>
 <body>
 
 </body>
